<resources>
    <string name="app_name">Pokemon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Pokemon\'s</string>
    <string name="lbl_type">Tipo</string>
    <string name="lbl_evolution">Evolución</string>
    <string name="lbl_moves">Ataques</string>
    <string name="lbl_abilities">Habilidades</string>
    <string name="lbl_encounters">Ubicaciones</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="lbl_login">Iniciar Sesión</string>
    <string name="lbl_username">Usuario</string>
    <string name="lbl_password">Contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_configuration">Configuración</string>
    <string name="lbl_logout">Cerrar Sesión</string>
</resources>